syntax = "proto3";

package pdf_converter;

service PdfConverterService {
  rpc ConvertToPdf(ConvertToPdfRequest) returns (ConvertToPdfResponse);
}

message ConvertToPdfRequest {
  string body = 1;
  string template = 2;
}

message ConvertToPdfResponse {
  bytes result = 1;
}
